@@ -28,8 +28,6 @@ LIBWNCK_REQUIRED=2.5.0
 LIBGTOP_REQUIRED=2.13.0
 GTK_REQUIRED=2.8.0
 GNOME_VFS_REQUIRED=2.6.0
-LIBGKSUUI_REQUIRED=1.0.0
-LIBGKSU_REQUIRED=0.15.0
 
 PKG_CHECK_MODULES(PROCMAN, glib-2.0 >= $GLIB_REQUIRED libgnome-2.0 >= $LIBGNOME_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED gconf-2.0 >= $GCONF_REQUIRED libgtop-2.0 >= $LIBGTOP_REQUIRED libwnck-1.0 >= $LIBWNCK_REQUIRED gtk+-2.0 >= $GTK_REQUIRED gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED)
 
@@ -102,34 +100,6 @@ AC_SUBST(SELINUX_LIBS)
 
 
 
-AC_ARG_ENABLE(libgksu, AC_HELP_STRING(--enable-libgksu, enable libgksu support), \
-		       enable_libgksu=$enableval, enable_libgksu=auto)
-
-# gksu detection
-if test x$enable_libgksu = xno ; then
-    have_libgksu=no;
-else
-    PKG_CHECK_MODULES(LIBGKSU, libgksu1.2 >= $LIBGKSU_REQUIRED libgksuui1.0 >= $LIBGKSUUI_REQUIRED,
-			have_libgksu=yes, have_libgksu=no)
-fi
-
-AM_CONDITIONAL(ENABLE_LIBGKSU, test x$have_libgksu = xyes, [Define to enable libgksu support])
-
-if test x$have_libgksu = xyes ; then
-    AC_DEFINE(HAVE_LIBGKSU, 1, [Define to enable libgksu support])
-else
-    LIBGKSU_CFLAGS=
-    LIBGKSU_LIBS=
-    LIBGKSUUI_CFLAGS=
-    LIBGKSUUI_LIBS=
-fi
-
-AC_SUBST(LIBGKSU_CFLAGS)
-AC_SUBST(LIBGKSU_LIBS)
-AC_SUBST(LIBGKSUUI_CFLAGS)
-AC_SUBST(LIBGKSUUI_LIBS)
-
-
 AC_CONFIG_FILES([
 Makefile
 src/Makefile
@@ -149,5 +119,4 @@ Configuration:
         Source code location:      ${srcdir}
         Compiler:                  ${CC}
 	Building SELinux support:  ${have_selinux}
-	Building gksu support:     ${have_libgksu}
 "
