@@ -1,66 +1,64 @@
 #include <config.h>
 
-/* FIXME: hack the Makefile.am */
-
-#if HAVE_LIBGKSU
-
-#include <gksu.h>
-#include <gksuui-dialog.h>
-
 #include "procman.h"
 #include "procman_gksu.h"
 
 
+static gboolean (*gksu_run)(const char *, GError **);
 
-gboolean
-procman_gksu_create_root_password_dialog(char * command)
+
+static void load_gksu(void)
 {
-       static GksuContext *context;
-       GError *error = NULL;
-       gboolean ret = TRUE;
+	static gboolean init;
+	GModule *gksu;
 
-       if (!context) {
-	       context = gksu_context_new();
-	       gksu_context_set_debug(context, TRUE);
-       }
+	if (init)
+		return;
 
-       gksu_context_set_command(context, command);
+	init = TRUE;
 
-       if (gksu_context_try_need_password(context)) {
-	       GtkWidget *dialog;
-	       gint response;
+	gksu = g_module_open("libgksu2.so",
+			     G_MODULE_BIND_LAZY | G_MODULE_BIND_LOCAL);
 
-	       dialog = gksuui_dialog_new();
-	       response = gtk_dialog_run(GTK_DIALOG(dialog));
+	if (gksu) {
+		if (g_module_symbol(gksu, "gksu_run", &gksu_run)) {
 
-	       if (response == GTK_RESPONSE_OK) {
-		       char *password;
-		       password = gksuui_dialog_get_password(GKSUUI_DIALOG(dialog));
-		       gksu_context_set_password(context, password);
-		       memset(password, g_random_int(), strlen(password));
-		       g_free(password);
-	       }
-
-	       gtk_widget_destroy(dialog);
-
-	       if (response != GTK_RESPONSE_OK) {
-		       ret = FALSE;
-		       goto out;
-	       }
-       }
-
-       if (gksu_context_sudo_run(context, &error) == -1) {
-	       g_warning("error: %s - command: '%s' - user: '%s'\n",
-			 error->message,
-			 gksu_context_get_command(context),
-			 gksu_context_get_user(context));
-	       g_error_free(error);
-	       ret = FALSE;
-       }
-
- out:
-       return ret;
+			g_module_make_resident(gksu);
+			g_print("Found libgksu2\n");
+		} else {
+			g_module_close(gksu);
+		}
+	}
 }
 
 
-#endif /* HAVE_LIBGKSU */
+
+
+
+gboolean procman_gksu_create_root_password_dialog(const char *command)
+{
+	GError *e = NULL;
+
+	/* Returns FALSE or TRUE on success, depends on version ... */
+	gksu_run(command, &e);
+
+	if (e) {
+		g_error("Could not run gksu_run(\"%s\") : %s\n",
+			command, e->message);
+		g_error_free(e);
+		return FALSE;
+	}
+
+	g_message("gksu_run did fine\n");
+	return TRUE;
+}
+
+
+
+gboolean
+procman_has_gksu(void)
+{
+	load_gksu();
+	return gksu_run != NULL;
+}
+
