@@ -1,5 +1,15 @@
 2006-06-25  Benoît Dejean  <benoit@placenet.org>
 
+	* configure.in:
+	* src/procdialogs.c: (procdialog_create_root_password_dialog):
+	* src/procman_gksu.c: (load_gksu),
+	(procman_gksu_create_root_password_dialog), (procman_has_gksu):
+	* src/procman_gksu.h:
+	
+	Now uses libgksu2 if available at runtime.
+
+2006-06-25  Benoît Dejean  <benoit@placenet.org>
+
 	* src/procactions.c (renice): 
 	
 	Make sure the table is not updated during renice.
